shared pipes and directives

--- a/src/app/list/item.component.html
+++ b/src/app/list/item.component.html
@@ -2,7 +2,7 @@
   <img class="icon-head" src="./images/Iverson.jpg">
   <div class="contact-info">
     <label class="contact-name">{{ contact.name }}</label>
-    <span class="contact-tel">{{ contact.telNum }}</span>
+    <span class="contact-tel">{{ contact.telNum | phone }}</span>
     <i class="contact-to-detail"></i>
   </div>
 </a>
