--- a/src/app/shared/footer.component.html
+++ b/src/app/shared/footer.component.html
@@ -1,9 +1,9 @@
 <nav>
   <a [routerLink]=" ['/collection'] " [ngClass]="{clickOn: !isListPage}">
-    <i>list</i>
+    <i>Favourite Dudes</i>
   </a>
   <a [routerLink]=" ['/list']" [ngClass]="{clickOn: isListPage}">
     <em></em>
-    <i>contacts</i>
+    <i>Contacts</i>
   </a>
 </nav>
